# SmartShelf-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_api.py  test_google_vision.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
migrations/: README.md
near_expiry_platform/: main.py
near_expiry_platform/app/: main.py
near_expiry_platform/app/ai_modules/: base.py
near_expiry_platform/app/ai_modules/classification/: content_classifier.py  models.py
near_expiry_platform/app/ai_modules/duplicate_detection/: embedding_detector.py  hash_detector.py
near_expiry_platform/app/ai_modules/ocr/: date_parser.py  extractor.py
near_expiry_platform/app/ai_modules/scoring/: confidence_scorer.py
near_expiry_platform/app/api/: deps.py
near_expiry_platform/app/api/v1/: router.py
near_expiry_platform/app/api/v1/endpoints/: admin.py  auth.py  products.py
near_expiry_platform/app/config/: database.py  settings.py
near_expiry_platform/app/core/: exceptions.py  middleware.py  security.py
near_expiry_platform/app/crud/: base.py  product.py  user.py
near_expiry_platform/app/models/: database.py  enums.py  schemas.py
near_expiry_platform/app/services/: ai_pipeline_service.py  file_service.py  notification_service.py  product_service.py
near_expiry_platform/app/tests/: conftest.py
near_expiry_platform/app/tests/test_api/: test_health.py  test_products.py
near_expiry_platform/app/utils/: date_utils.py  image_utils.py  logging.py
requirements/: base.txt  dev.txt
scripts/: deploy.py  init_db.py
